# myoverlay

./: .gitignore  README.md  config.example.toml  pyproject.toml  sf_export.py  sf_map.py  sf_probe.py  sf_probe2.py  sf_relap.py
.github/workflows/: release.yml  tests.yml
assets/branding/: README.md  render_assets.py
packaging/: README.md  build_exe.ps1  myoverlay.spec  myoverlay_launcher.py
packaging/msi/: Product.wxs  WizardUI.wxs  build_msi.ps1  gen_bitmaps.py  gen_i18n_ui.py  i18n_ui.js  run_google_setup.js  uninstall_cleanup.js  validate_google.js  write_settings.js
scripts/: gcloud_youtube_setup.ps1  gcloud_youtube_setup.sh
src/media_tools/: cli.py  config.py  correlate.py  encoding.py  gcp_console.py  i18n.py  library.py  overlay.py  pipeline.py  publish.py  raceend.py  relap.py  render.py  reviewplan.py  scan.py  slice.py  sync.py  telemetry.py  tools.py  videojoin.py  xrk_io.py
tests/: conftest.py  test_best_lap.py  test_camera_ingest.py  test_correlate.py  test_derived_laps.py  test_encoding.py  test_gui_import.py  test_i18n.py  test_installer_settings.py  test_launcher.py  test_library.py  test_mychron_ingest.py  test_overlay_render.py  test_pipeline.py  test_publish.py  test_raceend.py  test_relap.py  test_reviewplan.py  test_rs3_dialogs.py  test_scan.py  test_slice.py  test_sync.py  test_telemetry.py  test_tools.py
tools/: README.md  proof_slices.py  sync_eval.py
tools/oneoff/: migrate_2047_day.py
tools/research/: boundary_slices.py  check_twins.py  debug_feat.py  debug_sync.py  envelope_lab.py  eval_rmsonly.py  feature_lab.py  tune_fine.py  (+3 more)
(+9 files in other folders)
