[project]
name = "media-tools"
version = "0.1.0"
description = "Zero-touch karting video + telemetry pipeline: DJI camera ingest, MyChron telemetry, overlay render, YouTube publish"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "watchdog>=5.0",
    "pandas>=2.2",
    "psutil>=6.0",
    "libxrk>=0.11",
    "python-dateutil>=2.9",
    "rich>=13.0",
    "gpxpy>=1.6",
    "pillow>=10.4",
    "numpy>=1.26",
    "google-api-python-client>=2.150",
    "google-auth-oauthlib>=1.2",
    # Arabic overlay text shaping (language = "ar")
    "arabic-reshaper>=3.0",
    "python-bidi>=0.6",
    "pywinauto>=0.6.9; sys_platform == 'win32'",
    # `mt google-setup` Console automation (post-install: playwright install chromium)
    "playwright>=1.49",
]

[project.scripts]
mt = "media_tools.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/media_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
